# axur-tool

./: .gitignore  .repomix-instruction.md  .repomixignore  CLI_REFERENCE.md  Cargo.toml  DEPLOY.md  Dockerfile  LEAPCELL_GUIDE.md  LICENSE  Magazine_Luiza_SA_2026-02-13_report.html  README.md  SECURITY_AUDIT.md  SESSION_HANDOFF.md  SUMMARY.md  Shuttle.toml  audit.toml  authorize_user.py  backend_audit.xml  backend_build.txt  backend_build2.txt  backend_build3.txt  boot.ps1  build-frontend.ps1  build_errors.txt  build_errors2.txt  build_log.txt  build_log_full.txt  build_log_robust.txt  check.json  check_errors.txt  check_result.txt  check_result2.txt  check_result3.txt  check_result4.txt  check_result5.txt  check_result6.txt  context_summary.xml  current_status.json  deny.toml  deploy_check.json  (+28 more)
crates/backend/: Cargo.toml
crates/backend/src/: db.rs  error.rs  firebase.rs  github_storage.rs  google_services.rs  injector.rs  lib.rs  main.rs  queue.rs  shuttle.rs
crates/backend/src/middleware/: mod.rs  security.rs
crates/backend/src/routes/: admin.rs  admin_config.rs  auth.rs  beta.rs  feedback.rs  import_export.rs  logs_api.rs  marketplace.rs  mod.rs  queue.rs  remote_log.rs  report.rs  status.rs  storage.rs  templates.rs
crates/backend/src/services/: mod.rs  report_service.rs
crates/backend/src/utils/: coords.rs
crates/core/: Cargo.toml  debug_report.html  mock_report.html
crates/core/assets/: cover_image_base64.txt  toc_image_base64.txt
crates/core/examples/: design_test.html  generate_neuro_report.rs  mock_report.rs  probe_creds.rs  probe_th.rs
crates/core/src/: build_error_temp.rs  error_codes.rs  errors.rs  i18n.rs  lib.rs  pptx_mapper.rs
crates/core/src/api/: mod.rs  report.rs  retry.rs
crates/core/src/editor/: mod.rs  placeholders.rs  storage.rs  types.rs
crates/core/src/i18n/: compat.rs  legacy.rs  loader.rs  mod.rs
crates/core/src/plugins/: mod.rs  registry.rs  traits.rs
crates/core/src/plugins/builtin/: ai_intent.rs  closing.rs  comparative.rs  cover.rs  credentials.rs  data_exposure.rs  examples.rs  geospatial.rs  google_slides.rs  heatmap.rs  helpers.rs  incidents.rs  insights.rs  intro.rs  kill_chain.rs  metrics.rs  mod.rs  poc_data.rs  radar.rs  roi.rs  solutions.rs  style_showcase.rs  takedowns.rs  theme.rs  threat_intel.rs  threats.rs  timeline.rs  toc.rs  velocity.rs  virality.rs
crates/core/src/report/: html.rs  language_switcher.rs  mod.rs  render_data_exposure_slide_snippet.rs  template_renderer.rs
crates/core/src/templates/: mod.rs
crates/core/translations/: en.json  es.json  pt-br.json
crates/frontend/: Cargo.toml  Trunk.toml  _redirects  index.html
crates/frontend/functions/: health.js
crates/frontend/functions/api/: [[path]].js
crates/frontend/src/: api.rs  i18n.rs  lib.rs  storage.rs  utils.rs
crates/frontend/src/components/: achievement_toast.rs  button.rs  card.rs  combobox.rs  error.rs  feedback_widget.rs  header.rs  hero.rs  hint_bubble.rs  hint_manager.rs  input.rs  live_preview.rs  loading.rs  mod.rs  preview_modal.rs  progress_checklist.rs  queue_status.rs  report_generator_form.rs  sandbox_banner.rs  step_highlight.rs  sync_overlay.rs  threat_hunting_toggle.rs  tutorial_orchestrator.rs  tutorial_welcome.rs
crates/frontend/src/onboarding/: achievements.rs  hints.rs  mod.rs  sandbox.rs  storage.rs  tutorial.rs
crates/frontend/src/pages/: admin_beta.rs  analytics.rs  apply.rs  dashboard.rs  editor.rs  login.rs  logs.rs  marketplace.rs  mod.rs  onboarding.rs
crates/frontend/src/services/: mod.rs  pptx_service.rs  screenshot_service.rs
crates/frontend/src/styles/: design_tokens.rs  mod.rs
crates/frontend/target-wasm/: .rustc_info.json
crates/frontend/target-wasm/debug/.fingerprint/bumpalo-2033a2f6971d4886/: lib-bumpalo
crates/frontend/target-wasm/debug/.fingerprint/cfg-if-4316c8dd3aae8aa0/: lib-cfg_if  lib-cfg_if.json
crates/frontend/target-wasm/debug/.fingerprint/parking_lot_core-154f88c136021799/: build-script-build-script-build
crates/frontend/target-wasm/debug/.fingerprint/proc-macro-error-attr-95913468c0a0e8a6/: output-build-script-build-script-build
crates/frontend/target-wasm/debug/.fingerprint/proc-macro-error-c6cbb551bc5d62dc/: build-script-build-script-build  build-script-build-script-build.json
crates/frontend/target-wasm/debug/.fingerprint/proc-macro2-cda94aea4132adac/: run-build-script-build-script-build.json
crates/frontend/target-wasm/debug/.fingerprint/proc-macro2-diagnostics-e5bdf88ae6b8209d/: build-script-build-script-build  build-script-build-script-build.json
crates/frontend/target-wasm/debug/.fingerprint/quote-51afc3f1a8f9c893/: run-build-script-build-script-build.json
crates/frontend/target-wasm/debug/.fingerprint/quote-e179e5d7049aaa4c/: build-script-build-script-build.json
crates/frontend/target-wasm/debug/.fingerprint/rustversion-e029203afee2b1ff/: run-build-script-build-script-build.json
crates/frontend/target-wasm/debug/.fingerprint/rustversion-e4f7611657e3a760/: build-script-build-script-build.json
crates/frontend/target-wasm/debug/.fingerprint/serde-5f7eb8fea0e69d0e/: build-script-build-script-build  build-script-build-script-build.json
crates/frontend/target-wasm/debug/.fingerprint/serde_core-9c9e93f78abc604a/: build-script-build-script-build
crates/frontend/target-wasm/debug/.fingerprint/serde_core-b6748bed1da58683/: build-script-build-script-build  build-script-build-script-build.json
crates/frontend/target-wasm/debug/.fingerprint/serde_json-900d321a83100a86/: build-script-build-script-build  build-script-build-script-build.json
crates/frontend/target-wasm/debug/.fingerprint/smallvec-628443efc9ab7c1b/: lib-smallvec  lib-smallvec.json
crates/frontend/target-wasm/debug/.fingerprint/thiserror-085c189f463f5b67/: build-script-build-script-build
crates/frontend/target-wasm/debug/.fingerprint/unicode-ident-5856aea57641a500/: lib-unicode_ident.json
crates/frontend/target-wasm/debug/.fingerprint/unicode-xid-36294c4968dfd879/: lib-unicode_xid
crates/frontend/target-wasm/debug/.fingerprint/version_check-97d4abe8d8c6d4cc/: lib-version_check
(+990 files in other folders)
