[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/backend",
    "crates/frontend",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Axur Team"]
license = "MIT"

[workspace.dependencies]
# Shared dependencies across crates
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
anyhow = "1.0"
thiserror = "1.0"
chrono = "0.4"
tokio = { version = "1.0", features = ["full"] }
