[package]
name = "axur-backend"
version.workspace = true
edition.workspace = true

[[bin]]
name = "axur-backend"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
axur-core = { path = "../core" }

# Web framework
axum = { version = "0.7", features = ["macros"] }
tokio.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# HTTP client (for proxying to Axur API)
reqwest.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Middleware and security
tower-http = { version = "0.5", features = ["cors", "fs", "trace"] }
tower = "0.4"

# Cookie handling for httpOnly sessions
cookie = { version = "0.18", features = ["secure"] }
axum-extra = { version = "0.9", features = ["cookie"] }

# SSE streaming
futures = "0.3"
tokio-stream = "0.1"
async-stream = "0.3"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.10.0", features = ["v4", "serde"] }
dotenv = "0.15"

# Remote logging
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls", "chrono", "uuid", "json", "macros"] }
