[package]
name = "axur-backend"
version.workspace = true
edition.workspace = true

[[bin]]
name = "axur-backend"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
axur-core = { path = "../core" }

# Web framework
axum = { version = "0.7", features = ["macros", "multipart"] }
tokio.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# HTTP client (for proxying to Axur API)
reqwest.workspace = true

# Error handling
anyhow.workspace = true
thiserror = "1.0"

# Middleware and security
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }
tower = { version = "0.4", features = ["util"] }

# Cookie handling for httpOnly sessions
cookie = { version = "0.18", features = ["secure"] }
axum-extra = { version = "0.9", features = ["typed-header", "multipart", "cookie"] }

# SSE streaming
futures = "0.3"
tokio-stream = "0.1"
async-stream = "0.3"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
uuid = { version = "1.0", features = ["v4", "serde"] }
dotenv = "0.15"

# Remote logging
base64 = "0.21"
chrono = { version = "0.4", features = ["serde"] }

# PPTX parsing
zip = "2"
sha2 = { version = "0.10.9", default-features = false }

# New dependencies
rand = "0.9"
jsonwebtoken = "9.2"
bcrypt = "0.15"
tempfile = "3.10"

# Google APIs (google-drive3 bundles hyper, hyper-rustls)
google-drive3 = "*"
# Need service-account feature for ServiceAccountAuthenticator
yup-oauth2 = { version = "12", features = ["service-account", "hyper-rustls"] }
governor = "0.6"
nonzero_ext = "0.3" # Helper for governor
once_cell = "1.19" # Lazy statics for Firebase client
clap = { version = "4.4", features = ["derive"] }
