[package]
name = "axur-core"
version.workspace = true
edition.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
anyhow.workspace = true
thiserror.workspace = true
chrono.workspace = true
tokio.workspace = true
regex = "1.10"
base64 = "0.21"
tracing = "0.1"

[features]
default = []
web = []  # Enable web-specific code paths
cli = []  # Enable CLI-specific code paths
