[package]
name = "axur-core"
version.workspace = true
edition.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
anyhow.workspace = true
thiserror.workspace = true
chrono.workspace = true
tokio.workspace = true
uuid = { version = "1.6", features = ["v4", "serde"] }
regex = "1.10"
base64 = "0.21"
tracing = "0.1"

[features]
default = []
web = []  # Enable web-specific code paths
cli = []  # Enable CLI-specific code paths

[dev-dependencies]
dotenv = "0.15"
