[package]
name = "axur-frontend"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Leptos framework
leptos = { version = "0.6", features = ["csr"] }

# HTTP client for WASM
gloo-net = "0.6"
gloo-storage = "0.3"
gloo-timers = { version = "0.3", features = ["futures"] }

# Serialization
serde.workspace = true
serde_json.workspace = true

# Utilities
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Window", "Document", "HtmlElement", "console",
    "Blob", "BlobPropertyBag", "Url", "RequestCredentials",
    "Navigator", "Clipboard", "EventSource", "MessageEvent",
    "EventSourceInit", "Event"
] }
console_error_panic_hook = "0.1"

[dev-dependencies]
wasm-bindgen-test = "0.3"

